# YOUTUBE2SPOTIFY

./: 2  Cargo.toml  README.md  temp.txt  todo.md
src/: aggregator.rs  helpers.rs  main.rs  spotify_handler.rs  track_res.json
