[package]
name = "youtube2_spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rspotify = { version = "0.11.6", features = ["cli"] }
tokio = { version = "1.25.0", features = ["full"] }
