[package]
name = "youtube2_spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.14", features = ["json"] }
rspotify = { version = "0.11.6", features = ["cli"] }
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
