[package]
name = "youtube2_spotify"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.14", features = ["json"] }
rspotify = { version = "0.11.6", features = ["cli"] }
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
indicatif = "0.17.3"
itertools = "0.10.5"
clap = { version = "4.2.1", features = ["derive"] }
